--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="NIX -  O melhor e maior banco da América Latina" content="">
     <meta name="Fellipe Gomes Versiani" content="">
 
-    <title>BANCO NIX</title>
+    <title>Fellipe Gomes Versiani</title>
 	
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-touch.js"></script>
